--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,5 @@ project(my_vector)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(my_vector main.cpp my_vector.h)
+add_executable(my_vector my_vector.h test_my_vector.cpp)
+TARGET_LINK_LIBRARIES(my_vector -lgtest)
